tests/baselines/reference/errorRecoveryWithDotFollowedByNamespaceKeyword.errors.txt
errorRecoveryWithDotFollowedByNamespaceKeyword.ts(4,15): error TS1003: Identifier expected.
errorRecoveryWithDotFollowedByNamespaceKeyword.ts(9,2): error TS1005: '}' expected.


==== errorRecoveryWithDotFollowedByNamespaceKeyword.ts (2 errors) ====
    namespace A {
        function foo() {
            if (true) {
                B.
                  
!!! error TS1003: Identifier expected.
                
    
            namespace B {
                export function baz() { }
    }
     
!!! error TS1005: '}' expected.
!!! related TS1007 errorRecoveryWithDotFollowedByNamespaceKeyword.ts:3:19: The parser expected to find a '}' to match the '{' token here.